Revision history for Perl module WWW::Mechanize::Cached

{{$NEXT}}

1.47 2015-03-03 23:00:01 America/Toronto
    - Use nfreeze rather than freeze for portability (John SJ Anderson)

1.46 2015-02-08 21:41:11 America/Toronto
    - Bump Moo version to fix tester failures (Mark Gardner)

1.45 2015-02-07 18:16:43 America/Toronto
    - Ported from Moose to Moo (Mark Gardner)

1.44 2014-08-23 11:25:15 America/Toronto
    - Support working with CHI automatically if Cache::FileCache is not installed
    - GH #6 (Kent Fredric)

1.43 2013-07-26 23:04:40 America/Toronto
    - Reformatted Changes file as per CPAN::Changes::Spec (Neil Bowers)

1.42 2013-06-29
    - Allow caching w/ Content-Encoding == chunked + no size header (Kent
      Fredric)

1.41 2012-06-27
    - Account for content length when deciding whether to cache (Kent Fredric)

1.40 2010-10-18
    - Fixed file prefix in cache_key.t when run under Windows

1.39 2010-10-09
    - live tests now skip if we can't connect to the live URL
    - Storable now has a specific version prerequisite

1.38 2010-10-07
    - cache_key test should now be portable to Windows
    - Critic test removed as Dist::Zilla runs this test automatically
    - POD tests should now only be run by author

1.37 2010-08-30
    - Removed TestCache from Makefile.  Had been automatically added
      by Dist::Zilla

1.36 2010-08-30
    - Caching is now positive by default (was negative up to this point)
    - Referring URLs are now, by defaut, not used when creating cache keys.
      This reverses the behaviour of previous versions.  RT #56757
    - Now using Moose and Dist::Zilla

1.35 2009-11-20
    - Changed test URL, which was causing a small percentage of installs to
      fail
    - Added latest HTTP::Headers to prerequisites in order to prevent some
      failed installs

1.34 2009-11-20
    - Added first example script
    - Expanded documentation re: custom caches
    - Removed some outdated files from distro

1.33 2009-07-13