@@ -4,6 +4,7 @@ use strict;
 use warnings FATAL   => 'all';
 use Test::More tests => 14;
 use Test::Requires 'CHI';
+use Test::RequiresInternet ( 'www.wikipedia.com' => 80 );
 
 # Google is a poor choice for this set of tests, as the main page google.com redirects, and the page it redirects
 # to specifies "do not cache", and doesn't return a content-length.
